# ManjaWord

./: BUGS.md  Bugs1.md  README.md  build.sh  document.manjaword.docx.manjaword.json  index.html  manjaword-rust.patch  package-lock.json  package.json  run.sh  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autosave.rs  exporter.rs  file_handler.rs  grammar.rs  main.rs
src/components/: Editor.jsx  StatusBar.jsx  Toolbar.jsx  TopMenu.jsx
src/styles/: App.css  Editor.css  StatusBar.css  Toolbar.css  TopMenu.css  app.css  index.css
