[package]
name = "manjaword"
version = "1.0.0"
description = "ManjaWord desktop editor"
authors = ["ManjaWord Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
docx-rs = "0.4.17"
printpdf = "0.7.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-dialog = "2.2.1"
tokio = { version = "1.43.0", features = ["fs", "io-util", "sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
